Fixed text-align for intro-slogan

--- a/css/app.css
+++ b/css/app.css
@@ -4890,8 +4890,7 @@ form#index-contact-form .contact-form-input-group-button {
   padding: 3.75rem 0; }
   #index .intro-slogan h2 {
     color: #fff;
-    text-shadow: -0.125rem 0.1875rem 0 rgba(0, 0, 0, 0.45);
-    text-align: right; }
+    text-shadow: -0.125rem 0.1875rem 0 rgba(0, 0, 0, 0.45); }
   #index .intro-slogan .prose {
     padding: 1.875rem 1rem;
     background: #fff;
