--- a/scss/pages/index/_index.scss
+++ b/scss/pages/index/_index.scss
@@ -104,7 +104,7 @@ $max-430: "only screen and (max-width : 26.875em)";
 		h2 {
 			color: #fff;
 			text-shadow: rem(-2) rem(3) 0 rgba(0,0,0,0.45);
-			text-align: right;
+			// text-align: right;
 		}
 
 		.prose {
